<resources>
    <string name="app_name">PlantApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to">Welcome to</string>
    <string name="plant_app">PlantApp</string>
    <string name="welcome_definition">Identify more than 3000+ plants with 88% \naccuracy.</string>
    <string name="privacy_definition">By tapping next, you are agreeing to PlantID \nTerms of Use Privacy Policy.</string>
    <string name="menu_home">Home</string>
    <string name="menu_diagnose">Diagnose</string>
    <string name="menu_garden">My Garden</string>
    <string name="menu_profile">Profile</string>
    <string name="item_question_content_desc">Question Image</string>
    <string name="item_category_content_desc">Category Image</string>
    <string name="plant_lover_text">Hi, plant lover!</string>
    <string name="good_afternoon_text">Good Afternoon! ⛅️</string>
    <string name="search_icon_text">Search Icon</string>
    <string name="search_plants_hint">Search for plants</string>
    <string name="premium_icon">Premium Icon</string>
    <string name="free_premium_text">FREE Premium Available</string>
    <string name="tap_to_upgrade_text">Tap to upgrade your account!</string>
    <string name="arrow_icon">Arrow Icon</string>
    <string name="fab_content_desc">Fab Icon Content Desc</string>
    <string name="get_started">Get Started</string>
    <string name="continue_button_text">Continue</string>
    <string name="try_button_text">Try free for 3 days</string>
    <string name="after_three_day_trial">After the 3-day free trial period you’ll be charged ₺274.99 per year unless you cancel before the trial expires. Yearly Subscription is Auto-Renewable</string>
    <string name="terms_conditions">Terms • Privacy • Restore</string>
    <string name="badge">Save 50%</string>
    <string name="premium">Premium</string>
    <string name="access_all_features">Access All Features</string>
</resources>