<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/paywall_bg">

    <FrameLayout
        android:id="@+id/headerContainer"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_paywall"
            android:layout_width="match_parent"
            android:paddingTop="64dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/paywall_plant" />

        <LinearLayout
            android:id="@+id/logoPremiumContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/logoPlantApp"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:src="@drawable/plant_logo"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/premiumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/premium"
                android:fontFamily="@font/roboto"
                android:layout_marginStart="8dp"
                android:textColor="@android:color/white"
                android:textSize="27sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/subtitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/access_all_features"
            android:fontFamily="@font/roboto"
            android:alpha="0.7"
            android:textColor="@android:color/white"
            android:textSize="17sp"/>

        <ImageView
            android:id="@+id/buttonClose"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="top|end"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_close"
            android:background="@drawable/ic_close"/>
    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/headerContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/featureRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pricingRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:id="@+id/buttonTryFree"
                android:textAllCaps="false"
                style="@style/TryForFreeButton"
                android:text="@string/try_button_text"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp" />

            <TextView
                android:id="@+id/renewable"
                style="@style/PrivacyText"
                android:gravity="center"
                android:text="@string/after_three_day_trial"
                android:layout_marginTop="4dp"
                android:padding="4dp"
                android:lineSpacingExtra="0.3dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/termsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_conditions"
                style="@style/PrivacyText"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="52dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>